Update to support new Java 12 version.